--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,4 +1,10 @@
-.vscode/**
-.vscode-test/**
 .gitignore
+.vscode-test/**
+.vscode/**
+.yarnrc
+**/.eslintrc.json
+**/*.map
+**/*.ts
+**/tsconfig.json
+src/**
 vsc-extension-quickstart.md
