--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "categories": [
     "Programming Languages"
   ],
+  "activationEvents": [
+    "onCommand:lst.helloWorld"
+  ],
+  "main": "./out/extension.js",
   "contributes": {
     "languages": [
       {
@@ -29,6 +33,33 @@
         "scopeName": "source.lst",
         "path": "./syntaxes/lst.tmLanguage.json"
       }
+    ],
+    "commands": [
+      {
+        "command": "lst.helloWorld",
+        "title": "Hello World"
+      }
     ]
+  },
+  "scripts": {
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
+  },
+  "devDependencies": {
+    "@types/vscode": "^1.64.0",
+    "@types/glob": "^7.2.0",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "14.x",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
+    "glob": "^7.2.0",
+    "mocha": "^9.1.3",
+    "typescript": "^4.5.4",
+    "@vscode/test-electron": "^2.0.3"
   }
 }
