--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "vscode": "^1.64.0"
   },
   "categories": [
-    "Programming Languages"
+    "Programming Languages",
+    "Formatters"
   ],
   "activationEvents": [
-    "onCommand:lst.helloWorld"
+    "onLanguage:lst"
   ],
   "main": "./out/extension.js",
   "contributes": {
