Improve indentation rules

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -20,5 +20,15 @@
     ["(", ")"],
     ["\"", "\""],
     ["'", "'"]
+  ],
+  "onEnterRules": [
+    {
+      "beforeText": "^.*\\[.*\\]",
+      "action": { "indent": "none" }
+    },
+    {
+      "beforeText": "^.*\\[",
+      "action": { "indent": "indent" }
+    }
   ]
 }
